Eclipse 4.16 (M2) JDT Patch for Groovy-Eclipse: JDT commit 57460b9
#1075 #1061